[metadata]
name = partitionunity
version = 1.0.0
author = R. Cavoretto, A. De Rossi, S. Lancellotti, E. Perracchione

author_email = roberto.cavoretto@unito.it, alessandra.derossi@unito.it, sandro.lancellotti@unito.it, emma.perracchione@polito.it
description = Evaluate PU interpolant
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sandro-lancellotti/PU
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8
include_packages_data = True
install_requires =
    numpy >= 1.22.4
    scipy >= 1.8.1
